# bisc8

./: .gitignore  README.md
.github/workflows/: pages.yml
assets/: fortunes.txt  grimorio.en.txt  grimorio.es.txt  grimorio.txt
assets/sounds/kenney-ui-audio/: README.md
design/bisc8_mockups/: index.html
docs/: AI_HANDOFF.md  HANDOFF_NEXT.md  PROJECT_STATUS.md  index.html  manifest.json
docs/hardware/: README.md
docs/hardware/waveshare-adc-reference/: epaper_config.h  port_adc.cpp
docs/redesign/: BISC8_UI_BRIEF.md  bisc8-email-preview.html  bisc8-web-config.v2.html  mockup-B.html  mockup-C.html  ref-web-config.html
firmware/bisc8_fortune/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/bisc8_fortune/components/port_bsp/: CMakeLists.txt  idf_component.yml  port_codec.cpp  port_codec.h  port_display.cpp  port_display.h  port_i2c.cpp  port_lvgl.cpp  port_power.cpp
firmware/bisc8_fortune/main/: CMakeLists.txt  Kconfig.projbuild  app_config.cpp  app_config.h  app_events.h  app_main.cpp  audio_service.cpp  audio_service.h  battery.cpp  battery.h  board_support.cpp  board_support.h  build_info.cmake  button_controller.cpp  button_controller.h  captive_dns_service.cpp  captive_dns_service.h  connectivity_service.cpp  connectivity_service.h  debug_serial.cpp  debug_serial.h  display_service.cpp  display_service.h  email_service.cpp  email_service.h  fortune_service.cpp  fortune_service.h  localization.cpp  localization.h  smtp_service.cpp  smtp_service.h  voice_oracle_service.cpp  voice_oracle_service.h  web_portal.cpp  web_portal.h  web_portal.html
notes/: AI_HANDOFF.md  HANDOFF_NEXT.md  PERF_SESSION_2026-06-08.md  PROJECT_STATUS.md  TEST_PLAN_AUDIO.md
notes/gpt-suggestions/: BISC8_OPENAI_VOICE_ORACLE_HANDOFF.md
notes/hardware/waveshare-adc-reference/: 01_ADC_Test.ino
notes/redesign/: BISC8_UI_BRIEF.md  bisc8-device-screens.v1.html  bisc8-font-compare.html  bisc8-web-config.v1.html  bisc8-web-config.v3.html  mockup-A.html  ref-device-screens.html
public/flash/: README.md  index.html  manifest.json
server/: README.md  bisc8-email.config.example.php  bisc8-email.php
tests/: test_analyze_question_wav.py  test_audio_qa.py  test_device_states_static.py  test_display_design_static.py  test_email_service_static.py  test_generate_fortunes.py  test_grimoire_translations.py  test_product_setup_static.py  test_snapshot_png.py  test_voice_oracle_static.py
tools/: __init__.py  analyze_question_wav.py  audio_qa.py  capture_epaper_snapshot.py  embed_portal.py  generate_display_fonts.py  generate_fortunes.py  generate_logo_assets.py  generate_sound_assets.py  idf_env.sh  measure_oracle.py  prepare_web_flash.py  realtime_tts_smoke.mjs  speech_tts_smoke.mjs
(+10 files in other folders)
